加密保护/The Enigma Protector v2.33 Build 20110112/EnigmaSDK/VC/enigma_ide.h



typedef struct TWMContent {

    int   WMType;
    char* Name;
    int   NameLen;
    char* Text;
    int   TextLen;
    char* FileName;
    int   FileNameLen;
    char* AFile;
    int   AFileLen;

} TWMContent, *PWMContent;


// Trial API
BOOL __declspec(dllimport) __stdcall EP_TrialExecutions( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_TrialExecutionsTotal();

int __declspec(dllimport) __stdcall EP_TrialExecutionsLeft();

BOOL __declspec(dllimport) __stdcall EP_TrialDays( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_TrialDaysTotal();

int __declspec(dllimport) __stdcall EP_TrialDaysLeft();

BOOL __declspec(dllimport) __stdcall EP_TrialExpirationDate( int* Year, int* Month, int* Day );

int __declspec(dllimport) __stdcall EP_TrialExpirationDateEx();

BOOL __declspec(dllimport) __stdcall EP_TrialDateTillDate( int* StartYear, int* StartMonth, int* StartDay, int* EndYear, int* EndMonth, int* EndDay );

int __declspec(dllimport) __stdcall EP_TrialDateTillDateStartEx();

int __declspec(dllimport) __stdcall EP_TrialDateTillDateEndEx();

BOOL __declspec(dllimport) __stdcall EP_TrialExecutionTime( int* Total, int* Left );

int __declspec(dllimport) __stdcall EP_TrialExecutionTimeTotal();

int __declspec(dllimport) __stdcall EP_TrialExecutionTimeLeft();

// Misc API
int __declspec(dllimport) __stdcall EP_MiscGetWatermark( int ID, PWMContent WM );

int __declspec(dllimport) __stdcall EP_MiscCountryCode();

// Protection API
int __declspec(dllimport) __stdcall EP_ProtectedStringByID( int Total, char* Left, int Len);

int __declspec(dllimport) __stdcall EP_ProtectedStringByKey( char* Key, char* Left, int Len);

// Crypt API
int __declspec(dllimport) __stdcall EP_CryptHashBuffer( int Hash, byte* Buffer, int Size, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileA( int Hash, char* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashFileW( int Hash, wchar_t* FileName, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringA( int Hash, char* Str, byte* Digest);

int __declspec(dllimport) __stdcall EP_CryptHashStringW( int Hash, wchar_t* Str, byte* Digest);

void __declspec(dllimport) __stdcall EP_CryptEncryptBuffer( byte* Buffer, int Size, char* Key);

void __declspec(dllimport) __stdcall EP_CryptEncryptBufferEx( byte* InBuffer, byte* OutBuffer, int Size, byte* Key, int KeySize);

void __declspec(dllimport) __stdcall EP_CryptDecryptBuffer( byte* Buffer, int Size, char* Key);

void __declspec(dllimport) __stdcall EP_CryptDecryptBufferEx( byte* InBuffer, byte* OutBuffer, int Size, byte* Key, int KeySize);

// Checkup API
BOOL __declspec(dllimport) __stdcall EP_CheckupCopies( int* Total, int* Current);

int __declspec(dllimport) __stdcall EP_CheckupCopiesTotal();

int __declspec(dllimport) __stdcall EP_CheckupCopiesCurrent();

BOOL __declspec(dllimport) __stdcall EP_CheckupIsProtected();

BOOL __declspec(dllimport) __stdcall EP_CheckupIsEnigmaOk();

// Enigma API
int __declspec(dllimport) __stdcall EP_EnigmaVersion();

// Splash screen
int __declspec(dllimport) __stdcall EP_SplashScreenShow();

void __declspec(dllimport) __stdcall EP_SplashScreenHide();