加密保护/The Enigma Protector v2.33 Build 20110112/EnigmaSDK/VB/enigma_ide.bas


' Trial API
Public Declare Function EP_TrialExecutions Lib "enigma_ide.dll" (ByRef Total As Long, ByRef Left As Long) As Byte
Public Declare Function EP_TrialExecutionsTotal Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialExecutionsLeft Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialDays Lib "enigma_ide.dll" (ByRef Total As Long, ByRef Left As Long) As Byte
Public Declare Function EP_TrialDaysTotal Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialDaysLeft Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialExpirationDate Lib "enigma_ide.dll" (ByRef Year As Long, ByRef Month As Long, ByRef Day As Long) As Byte
Public Declare Function EP_TrialExpirationDateEx Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialDateTillDate Lib "enigma_ide.dll" (ByRef StartYear As Long, ByRef StartMonth As Long, ByRef StartDay As Long, ByRef EndYear As Long, ByRef EndMonth As Long, ByRef EndDay As Long) As Byte
Public Declare Function EP_TrialDateTillDateStartEx Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialDateTillDateEndEx Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialExecutionTime Lib "enigma_ide.dll" (ByRef Total As Long, ByRef Left As Long) As Byte
Public Declare Function EP_TrialExecutionTimeTotal Lib "enigma_ide.dll" () As Long
Public Declare Function EP_TrialExecutionTimeLeft Lib "enigma_ide.dll" () As Long

' Misc API
Public Declare Function EP_MiscGetWatermark Lib "enigma_ide.dll" (ByVal ID As Long, ByRef WM As TWMContent) As Long
Public Declare Function EP_MiscCountryCode Lib "enigma_ide.dll" () As Long
Public Declare Function EP_SplashScreenShow Lib "enigma_ide.dll" () As Long
Public Declare Function EP_SplashScreenHide Lib "enigma_ide.dll" ()

' Protection API
Public Declare Function EP_ProtectedStringByID Lib "enigma_ide.dll" (ByVal ID As Long, ByVal Str As String, ByVal Length As Byte) As Byte
Public Declare Function EP_ProtectedStringByKey Lib "enigma_ide.dll" (ByVal Key As String, ByVal Str As String, ByVal Length As Byte) As Byte

' Crypt API TODO
' function EP_CryptHashBuffer(Hash : Cardinal; Buffer : pointer; Size : Cardinal; Digest : pointer) : Cardinal; stdcall;
' function EP_CryptHashFileA(Hash : Cardinal; FileName : PAnsiChar; Digest : pointer) : Cardinal; stdcall;
' function EP_CryptHashFileW(Hash : Cardinal; FileName : PWideChar; Digest : pointer) : Cardinal; stdcall;
' function EP_CryptHashStringA(Hash : Cardinal; Str : PAnsiChar; Digest : pointer) : Cardinal; stdcall;
' function EP_CryptHashStringW(Hash : Cardinal; Str : PWideChar; Digest : pointer) : Cardinal; stdcall;
' procedure EP_CryptEncryptBuffer(Buffer : pointer; Size : Cardinal; Key : PAnsiChar); stdcall;
' procedure EP_CryptEncryptBufferEx(InBuffer, OutBuffer : pointer; Size : Cardinal; Key : pointer; KeySize : Cardinal); stdcall;
' procedure EP_CryptDecryptBuffer(Buffer : pointer; Size : Cardinal; Key : PAnsiChar); stdcall;
' procedure EP_CryptDecryptBufferEx(InBuffer, OutBuffer : pointer; Size : Cardinal; Key : pointer; KeySize : Cardinal); stdcall;

' Checkup API
Public Declare Function EP_CheckupCopies Lib "enigma_ide.dll" (ByRef Total As Long, ByRef Current As Long) As Boolean
Public Declare Function EP_CheckupCopiesTotal Lib "enigma_ide.dll" () As Long
Public Declare Function EP_CheckupCopiesCurrent Lib "enigma_ide.dll" () As Long
Public Declare Function EP_CheckupIsProtected Lib "enigma_ide.dll" () As Boolean
Public Declare Function EP_CheckupIsEnigmaOk Lib "enigma_ide.dll" () As Boolean
Public Declare Function EP_CheckupFindProcess Lib "enigma_ide.dll" (ByVal FileName As String, ByVal WindowText As String, ByVal WindowClass As String) As Boolean

' Enigma API
Public Declare Function EP_EnigmaVersion Lib "enigma_ide.dll" () As Long
